Fixed: pagina categorie scrollbar hided

--- a/src/pages/categories_page/styles.module.scss
+++ b/src/pages/categories_page/styles.module.scss
@@ -90,6 +90,10 @@
   }
 }
 
+.Categories::-webkit-scrollbar {
+  display: none;
+}
+
 @media only screen and (min-width: 480px) {
   .Back {
     padding-left: 2rem;
